<resources>
    <string name="app_name">Prototype Chat</string>
    <string name="title_home">ホーム</string>
    <string name="title_friends">ともだちリスト</string>
    <string name="title_talk">トーク</string>
    <string name="prompt_email">メールアドレス</string>
    <string name="prompt_password">パスワード</string>
    <string name="login">ログイン</string>
    <string name="title_sign_up">アカウント登録</string>
    <string name="sign_up">アカウントを作成</string>
    <string name="empty_email">メールアドレスを入力してください</string>
    <string name="invalid_email">有効なメールアドレスを入力してください</string>
    <string name="empty_password">パスワードを入力してください</string>
    <string name="login_failure">メールアドレスまたはパスワードが異なっています</string>
    <string name="prompt_name">ユーザー名</string>
    <string name="prompt_confirm_password">パスワード（確認用）</string>
    <string name="signup">登録</string>
    <string name="empty_name">お名前を入力してください</string>
    <string name="empty_confirm_password">パスワード（確認用）を入力してください</string>
    <string name="signup_successfully">アカウントを登録しました</string>
    <string name="offline">オフラインです</string>
    <string name="friends_list">ともだちリスト</string>
    <string name="show_friends">show friends</string>
    <string name="launch_qr_scanner">launch qr scanner</string>
    <string name="qr_scanner_description">QRコードをスキャンして友達追加できます</string>
    <string name="my_qrcode">マイQRコード</string>
    <string name="qr_generator_description">QRコードを使って友達を追加しましょう</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">追加</string>
    <string name="status_message">ステータスメッセージ</string>
    <string name="logout">ログアウト</string>
    <string name="not_set">未設定</string>
    <string name="save">保存</string>
    <string name="enter_message">メッセージを入力</string>
    <string name="chat_message">今何してる？</string>
    <string name="message_time">00:00</string>
    <string name="settings">設定</string>
    <string name="message">メッセージ</string>
    <string name="less_characters_warning">%1$s文字以上で入力してください</string>
    <string name="word_count">%1$d/%2$d</string>
    <string name="talk">トーク</string>
    <string name="app_logo">App Logo</string>
    <string name="invalid_qr_code">無効なQRコードです</string>
    <string name="allready_registered">既に登録されています</string>
    <string name="err_name">1~20文字以内で入力してください</string>
    <string name="err_name_blank">名前を入力してください</string>
    <string name="err_email">有効なメールアドレスを入力してください</string>
    <string name="err_email_blank">メールアドレスを入力してください</string>
    <string name="err_password">英大文字、英小文字、数字、記号をそれぞれ1文字以上含む6~20文字以内で入力してください</string>
    <string name="err_password_blank">パスワードを入力してください</string>
    <string name="err_confirm_password">パスワードとパスワード（確認用）が異なっています</string>
    <string name="err_confirm_password_blank">パスワード（確認用）を入力してください</string>
    <string name="create_account">アカウントを作成</string>
    <string name="add_friends_with_qrcode">QRコードで友達追加</string>
    <string name="send_message">Send Message.</string>
    <string name="last_message">Last message.</string>
    <string name="yesterday">昨日</string>
    <string name="add_friend">ともだち追加</string>
    <string name="continue_with_other_account">他のアカウントで続行</string>
    <string name="signup_failure">アカウントを作成中にエラーが発生しました。もう一度お試しください。</string>
</resources>