<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_ui.friends.FriendProfileActivity">

    <ImageView
        android:id="@+id/image_view_background_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:background="@drawable/default_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="90dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_background_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/image_view_profile"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/default_profile"
            app:civ_border="false" />


        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="12dp"
            android:elevation="20dp"
            android:gravity="center|center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/prompt_name" />

        <TextView
            android:id="@+id/text_view_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="12"
            android:singleLine="true"
            android:elevation="20dp"
            android:ellipsize="end"
            android:fadingEdge="horizontal"
            android:gravity="center|center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="@string/status_message" />

        <ImageButton
            android:id="@+id/image_button_go_talk"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:background="@drawable/ic_chat_bubble"
            android:elevation="20dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            app:backgroundTint="@null"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:gravity="center"
            android:text="@string/talk"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>