<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.portfolio.prototype_chat.home_ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/navigation_bar_height"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:context=".home_ui.home.HomeFragment">

        <LinearLayout
            android:id="@+id/linear_layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold"
                    tools:text="名前" />

                <TextView
                    android:id="@+id/text_view_statusMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:ems="12"
                    android:singleLine="true"
                    tools:text="ステータスメッセージ" />

            </LinearLayout>

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/image_view_profile"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/default_profile"
                app:civ_border="false" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_friends_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_profile">


            <TextView
                android:layout_width="266dp"
                android:layout_height="75dp"
                android:gravity="center_vertical"
                android:text="@string/friends_list"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_friendsCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="0" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/show_friends"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button_qr_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/launch_qr_scanner"
            android:src="@drawable/ic_qr_code"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>