<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.ProfileEditFragment"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_photo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/image_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/default_background" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/circularimage_profile"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerInParent="true"
                android:src="@drawable/default_profile"
                app:civ_border="false" />

            <Button
                android:id="@+id/button_pick"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="72dp"
                android:background="@drawable/pick_image_button"
                android:elevation="5dp"
                android:gravity="center_vertical|center_horizontal"
                app:backgroundTint="@null"
                tools:ignore="SpeakableTextPresentCheck" />
        </RelativeLayout>


        <Button
            android:id="@+id/button_pickbackground"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@id/card_photo"
            android:layout_alignBottom="@id/card_photo"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/pick_image_button"
            android:elevation="5dp"
            android:gravity="center_vertical|center_horizontal"
            app:backgroundTint="@null"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />


        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            tools:text="@string/prompt_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/status_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/text_statusmessage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ellipsize="end"
            android:ems="12"
            android:gravity="center_vertical"
            android:hint="@string/not_set"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="@color/white"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:drawableTint="@color/white"
            tools:text="@string/status_message" />
    </LinearLayout>
</LinearLayout>